--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   flutter:
     sdk: flutter
   fluttertoast: ^8.0.8
+  pin_input_text_field: ^4.1.1
+  provider: ^4.3.1
+  country_code_picker: ^2.0.2
+  sms_autofill: ^2.2.0
+  pinput: ^1.2.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
