--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,9 +47,9 @@ dev_dependencies:
   flutter_launcher_icons: "^0.9.2"
 
 flutter_icons:
-  android: false
+  android: true
   ios: true
-  image_path: "assets/logo.jpg"
+  image_path: "assets/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
