--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.4+4
+
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -27,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  firebase_database: ^9.0.6
   cloud_firestore: ^2.5.3
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.1.3
@@ -39,6 +41,9 @@ dependencies:
   country_code_picker: ^2.0.2
   sms_autofill: ^2.2.0
   pinput: ^1.2.0
+  flutter_paystack: ^1.0.5+1
+  
+  
 
 dev_dependencies:
   flutter_lints: ^1.0.0
@@ -65,6 +70,8 @@ flutter:
   assets:
     - assets/logo.png
     - assets/logo.jpg
+    - assets/pep1.jpg
+    - assets/pep2.jpg
     
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
